comments fixed